--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     :root {
       --bg:#5186ca;
-      --panel:#f9fbff;
+      --panel:#455e91;
       --text:#0f172a;
       --brand:#2563eb;
       --brand2:#1d4ed8;
